# best-practices-seminar

./: README.md  calendar  schedule  schedule.md  team_bios.md
slides/software-best-practices/debugging-with-DDT-2020-06-26/: README.md
slides/software-best-practices/debugging-with-DDT-2020-06-26/simple/: Makefile  core-dump.cpp  do-salloc  hello-world.cpp
slides/software-best-practices/intro-cmake-2020-08-07/: .gitignore  README.md
slides/software-best-practices/intro-cmake-2020-08-07/example-1/: CMakeLists.txt  example1.cxx
slides/software-best-practices/intro-cmake-2020-08-07/example-2/: CMakeLists.txt  example2.cxx
slides/software-best-practices/intro-cmake-2020-08-07/example-3/: CMakeLists.txt  example3.cxx  unique-code.cxx  unique-code.h
slides/software-best-practices/intro-cmake-2020-08-07/example-4/: CMakeLists.txt  example4.c
slides/software-best-practices/intro-cmake-2020-08-07/example-5/: CMakeLists.txt  example5.c
slides/software-best-practices/intro-cmake-2020-08-07/example-6/: CMakeLists.txt  config.h.in  example6.c
slides/software-best-practices/intro-cmake-2020-08-07/example-7/: CMakeLists.txt  example7.cxx
slides/software-best-practices/intro-cmake-2020-08-07/example-8/: CMakeLists.txt
slides/software-best-practices/intro-cmake-2020-08-07/example-8/main/: CMakeLists.txt
